// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> renders default 1`] = `
<div
  className="loader-0-2-1 loader_absolute-0-2-2"
>
  <span
    className="dot-0-2-4 dot_1-0-2-7"
    key="1"
  />
  <span
    className="dot-0-2-4 dot_2-0-2-8"
    key="2"
  />
  <span
    className="dot-0-2-4"
    key="3"
  />
</div>
`;

exports[`<Loader /> renders inline 1`] = `
<div
  className="loader-0-2-1 loader_inline-0-2-3"
>
  <span
    className="dot-0-2-4 dot_1-0-2-7"
    key="1"
  />
  <span
    className="dot-0-2-4 dot_2-0-2-8"
    key="2"
  />
  <span
    className="dot-0-2-4"
    key="3"
  />
</div>
`;

exports[`<Loader /> renders inverted 1`] = `
<div
  className="loader-0-2-1 loader_absolute-0-2-2"
>
  <span
    className="dot-0-2-4 dot_1-0-2-7 dot_inverted-0-2-5"
    key="1"
  />
  <span
    className="dot-0-2-4 dot_2-0-2-8 dot_inverted-0-2-5"
    key="2"
  />
  <span
    className="dot-0-2-4 dot_inverted-0-2-5"
    key="3"
  />
</div>
`;

exports[`<Loader /> renders large 1`] = `
<div
  className="loader-0-2-1 loader_absolute-0-2-2"
>
  <span
    className="dot-0-2-4 dot_1-0-2-7 dot_large-0-2-6"
    key="1"
  />
  <span
    className="dot-0-2-4 dot_2-0-2-8 dot_large-0-2-6"
    key="2"
  />
  <span
    className="dot-0-2-4 dot_large-0-2-6"
    key="3"
  />
</div>
`;

exports[`<Loader /> renders static 1`] = `
<div
  className="loader-0-2-1"
>
  <span
    className="dot-0-2-4 dot_1-0-2-7"
    key="1"
  />
  <span
    className="dot-0-2-4 dot_2-0-2-8"
    key="2"
  />
  <span
    className="dot-0-2-4"
    key="3"
  />
</div>
`;
